<resources>
    <string name="app_name">Store Inventory App</string>

    <string name="delete_all">Delete All
    Products</string>

    <string name="empty_title_text">Add a new
    product now</string>

    <string name="add_new_product">Add a Product</string>

    <string name="edit_existing_product">Edit
        Product</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string
        name="insert_product_successful">Product
        saved</string>

    <string name="insert_product_failed">Error with saving
    product</string>

    <string
        name="update_product_successful">Product
        updated</string>

    <string name="update_product_failed">Product
        could not be updated</string>

    <string name="unsaved_changes">Are you sure you
    want to quit? </string>

    <string name="discard">Discard now</string>

    <string name="finish_editing">Stay here
        and finish editing</string>

    <string
        name="delete_product_successful">Product has been
        deleted</string>

    <string name="delete_product_failed">Product
        could not be deleted</string>

    <string
        name="delete_message">Delete this
        product?</string>

    <string name="delete_all_message">Do you want
        to delete all products?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="category_name">Name</string>

    <string name="category_price">Price</string>

    <string name="category_quantity">Quantity</string>

    <string name="hint_product_name">T-shirt</string>

    <string name="hint_product_price">0</string>

    <string name="hint_product_quantity">0</string>

    <string name="unit_product_price">Euro</string>

    <string name="button_minus">-</string>

    <string name="button_plus">+</string>

    <string name="button_picture">Add picture</string>


    <string name="quantity_label"> available</string>

    <string name="price_label">€ </string>

    <string name="sale">Sale</string>

    <string name="invalid_product">Product needs to
    have a valid name, price, quantity and an image as well
        .</string>

    <string name="invalid_name">The product needs
        to have a name</string>
    <string name="invalid_price">The price cannot
        be 0 or lower </string>
    <string name="invalid_quantity">The quantity
        cannot be 0 or lower </string>

    <string
        name="order_more_supplier">E-MAIL THE
        SUPPLIER</string>

    <string name="subject_email">order</string>

    <string name="message_email">Hello. I would like to
        order the following product from you:
    </string>


</resources>

