<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color2"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp"
        tools:context="com.example.android.storeinventoryapp.EditorActivity">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingRight="32dp"
                android:text="@string/category_name"
                android:textColor="@color/color1"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/edit_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/hint_product_name"
                android:maxLength="30"
                android:textColor="@color/color1"
                android:textSize="16sp"
                android:textStyle="italic"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.50"
                android:paddingLeft="8dp"
                android:paddingRight="28dp"
                android:text="@string/category_price"
                android:textColor="@color/color1"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/edit_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:text="@string/hint_product_price"
                android:textColor="@color/color1"
                android:textSize="16sp"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/button_plus_p"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/button_plus"/>

            <Button
                android:id="@+id/button_minus_p"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:text="@string/button_minus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="16dp"
            android:paddingStart="16dp">

            <TextView
                android:id="@+id/product_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="12dp"
                android:text="@string/category_quantity"
                android:textColor="@color/color1"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/edit_quantity"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="16dp"
                android:text="@string/hint_product_quantity"
                android:textColor="@color/color1"
                android:textSize="16sp"
                android:textStyle="italic"/>

            <Button
                android:id="@+id/button_plus_q"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/button_plus"/>

            <Button
                android:id="@+id/button_minus_q"
                android:layout_width="50sp"
                android:layout_height="50sp"
                android:text="@string/button_minus"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingTop="16dp">

            <ImageView
                android:id="@+id/picture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="5"
                android:scaleType="centerCrop"
                android:src="@drawable/picture"/>

            <Button
                android:id="@+id/button_picture"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/button_picture"
                android:textAllCaps="true"/>

        </LinearLayout>

        <Button
            android:id="@+id/order"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:autoLink="email"
            android:text="@string/order_more_supplier"
            android:textAllCaps="true"/>

    </LinearLayout>
</ScrollView>